salesforce-port/force-app/main/default/objects/Expense__c/fields/Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>Base_Currency__c</fullName>
    <label>Base Currency</label>
    <type>Text</type>
    <length>3</length>
</CustomField>