salesforce-port/force-app/main/default/objects/Expense__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>