salesforce-port/force-app/main/default/objects/Expense__c/fields/Distance_Unit__c.field-meta.xml
<CustomField>
    <fullName>Distance_Unit__c</fullName>
    <label>Distance Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>mi</fullName><default>true</default><label>Miles</label></value>
            <value><fullName>km</fullName><default>false</default><label>Kilometers</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>