salesforce-port/force-app/main/default/objects/Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Cash</fullName><default>true</default><label>Cash/Manual</label></value>
            <value><fullName>Distance</fullName><default>false</default><label>Distance/Mileage</label></value>
            <value><fullName>Per_Diem</fullName><default>false</default><label>Per Diem</label></value>
            <value><fullName>Card</fullName><default>false</default><label>Card Transaction</label></value>
            <value><fullName>Time</fullName><default>false</default><label>Time</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>