salesforce-port/force-app/main/default/objects/Expense__c/fields/Has_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Has_Receipt__c</fullName>
    <label>Has Receipt</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>