salesforce-port/force-app/main/default/objects/Expense__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>Lookup</type>
    <referenceTo>Expense_Policy__c</referenceTo>
    <relationshipLabel>All Expenses</relationshipLabel>
    <relationshipName>All_Expenses</relationshipName>
</CustomField>