salesforce-port/force-app/main/default/objects/Expense__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>Expense Report</label>
    <type>Lookup</type>
    <referenceTo>Expense_Report__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
</CustomField>