salesforce-port/force-app/main/default/objects/Expense__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <type>Lookup</type>
    <referenceTo>Expense_Tag__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
</CustomField>